# sacess_parpe

./: README.md  export_vars.sh  list_benchmarks.sh
benchmarks/bbob/: benchmark_functions_BBOB.c
benchmarks/matlab/: examplematlab.c  examplematlab.d  examplematlab.h  initParametersMINLP.m  initParametersNLP.m  matlabMINLP.m  matlabNLP.m  matlabPE.m  matlabobjfunc.f90
benchmarks/systemsBiology/: benchmark_functions_SystemBiology.c  benchmark_functions_SystemBiology.h
benchmarks/systemsBiology/parPE/parpe_Crauste_CellSystems2017/: CMakeLists.txt  Crauste_CellSystems2017.h5  Crauste_CellSystems2017_adjoint.h5  Crauste_CellSystems2017_forward.h5
containers/: README.md
include/: configuration.h
include/method_module/: common_solver_operations.h  evaluationinterface.h  local_solvers.h  parallel_functions.h  solversinterface.h  structure_paralleltestbed.h
include/output/: output.h
makes/: Makefile.FT3
output/test/: best_solution_id0.csv  best_solution_id1.csv  best_solution_id2.csv  best_solution_id3.csv  best_solution_id4.csv  best_solution_id5.csv  best_solution_id6.csv  best_solution_id7.csv  best_solution_id8.csv  best_solution_id9.csv  convergence_id1.csv  (+30 more)
parpe_patch/: patch_parpe_sacess.path
reproducibility_scripts/: README.md  example_MM_B4.sh  example_SACDE_B1.sh  example_SACDE_B2.sh  example_SACDE_B3.sh  example_SACESS_B2.sh  example_SACESS_B3.sh  example_SACESS_B4.sh  example_SACMM_B2.sh  example_SACMM_B3.sh
scripts/: scripts.sh  send_12_proc.sh  send_12_proc_long.sh  send_12_proc_short.sh  send_24_proc.sh
src/: main_file.c  setup_benchmarks.c
(+240 files in other folders)
